# DES_03.Head-Unit

./: .gitignore  README.md  app_test.sh  middleware_test.sh  run.sh  run_raspi.sh
Yocto/: README.md
Yocto/poky/: .bblayers.conf.swp
Yocto/poky/4/conf/: bblayers.conf
Yocto/poky/bitbake/lib/bb/pysh/: pyshtables.py
Yocto/poky/meta-anaconda/: README
Yocto/poky/meta-anaconda/classes/: anaconda_image.bbclass  anaconda_kernel.bbclass  anaconda_support_image.bbclass  anaconda_support_kernel.bbclass
Yocto/poky/meta-anaconda/conf/: layer.conf
Yocto/poky/meta-anaconda/conf/distro/: anaconda.conf
Yocto/poky/meta-anaconda/example/: ks-imagecopy.cfg  ks-pkg.cfg
Yocto/poky/meta-anaconda/recipes-core/systemd/: systemd-serialgetty.bbappend  systemd_%.bbappend
Yocto/poky/meta-anaconda/recipes-extended/python-pykickstart/: python3-pykickstart_%.bbappend
Yocto/poky/meta-anaconda/recipes-gnome/gtk+/: gtk+3_%.%.%.bbappend
Yocto/poky/meta-anaconda/recipes-gnome/libgnome/: libgnomekbd_3.26.1.bb
Yocto/poky/meta-anaconda/recipes-graphics/xorg-xserver/: xserver-xf86-config_0.1.bbappend
Yocto/poky/meta-mylayer/conf/: layer.conf
arduino/front_arduino/: front_arduino.ino
arduino/rear_arduino/: rear_arduino.ino
infortainment/: CMakeLists.txt
infortainment/dashboard/: CMakeLists.txt
infortainment/dashboard/src/: dashboard.qrc
infortainment/dashboard/src/qml/mapbox/: api-key.txt
infortainment/head_unit/: CMakeLists.txt
infortainment/head_unit/src/: dbusmanager.cpp  dbusmanager.h
infortainment/head_unit/src/qml/: Camerapage.qml  Musicpage.qml  VideoDetail.qml  main.qml
infortainment/project-pyracer/fidl/: CAN.fidl
infortainment/project-pyracer/src-gen/v1/commonapi/: CANSomeIPStubAdapter.cpp  CANStubDefault.hpp
infotainment/: dbus_send.py
infotainment/build-dashboard-Desktop-Debug/: CMakeCache.txt.prev  Dashboard.cbp  Makefile  cmake_install.cmake
infotainment/build-dashboard-Desktop-Debug/.qtc_clangd/: compile_commands.json
infotainment/build-dashboard-Desktop-Debug/Dashboard_autogen/: moc_predefs.h  mocs_compilation.cpp
infotainment/build-dashboard-Desktop-Debug/Dashboard_autogen/UVLADIE3JM/: moc_dbusmanager.cpp  moc_someipmanager.cpp
infotainment/build-head_unit-Desktop-Debug/: CMakeCache.txt  Head_Unit.cbp  Makefile  cmake_install.cmake  qtcsettings.cmake
infotainment/build-head_unit-Desktop-Debug/.qtc_clangd/: compile_commands.json
infotainment/build-head_unit-Desktop-Debug/Head_Unit_autogen/UVLADIE3JM/: moc_someipmanager.cpp
infotainment/build-head_unit-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
infotainment/build-head_unit-Desktop_Qt_5_15_2_GCC_64bit-Debug/Head_Unit_autogen/: moc_predefs.h
infotainment/build-head_unit-Desktop_Qt_5_15_2_GCC_64bit-Debug/Head_Unit_autogen/UVLADIE3JM/: moc_dbusmanager.cpp  moc_someipmanager.cpp
infotainment/can-interface/: CMakeLists.txt
infotainment/can-interface/src/: CANService.cpp
infotainment/dashboard/: CMakeLists.txt  CMakeLists.txt.user.a4f31b2
infotainment/dashboard/src/: dbusmanager.cpp  main.cpp  piracersomeipmanager.cpp  piracersomeipmanager.h  someipmanager.cpp  someipmanager.h
infotainment/dashboard/src/qml/: ValueSource.qml  ValueSource.qml.autosave  dashboard.qml  dashboard.qml.autosave
infotainment/head_unit/: CMakeLists.txt  CMakeLists.txt.user.f4b5c4a
infotainment/head_unit/src/: dbusmanager.cpp  main.cpp  methodcallsomeipmanager.cpp  methodcallsomeipmanager.h  qml.qrc  someipmanager.cpp
infotainment/head_unit/src/image/: settingpage.h
infotainment/head_unit/src/qml/: Camerapage.qml  Lightpage.qml  MusicDeatil.qml  Musicpage.qml  Settingpage.qml  ValueSource.qml  VideoDetail.qml  main.qml
infotainment/piracer-interface/: CMakeLists.txt
infotainment/piracer-interface/fidl/: PIRACER.fdepl  PIRACER.fidl
infotainment/piracer-interface/src/: GamePad.cpp  PiracerClient.hpp  PiracerInterface.cpp  PiracerService_test.cpp  PiracerStubImpl.cpp
infotainment/piracer-interface/src-gen/v1/commonapi/: PiracerProxyBase.hpp  PiracerSomeIPProxy.cpp
infotainment/project-pyracer/fidl/: CAN.fidl
infotainment/project-pyracer/src/: CANClient.cpp  CANClient.hpp  CANService.cpp  CANStubImpl.cpp  CANStubImpl.hpp
qt/: dbus_qt_send.py  dbus_send.py
qt/build-head_unit-Desktop-Debug/: Makefile  head_unit  moc_settingpage.cpp  qrc_images.cpp
qt/build-head_unit-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  head_unit  moc_dbusmanager.cpp  moc_settingpage.cpp  moc_someipmanager.cpp  qrc_images.cpp  qrc_qml.cpp  qrc_resources.cpp
qt/dashboard/: dashboard.pro  dashboard.pro.user.09436e1  dashboard.qrc  dbusmanager.cpp  dbusmanager.h  main.cpp  myinterface.cpp  myinterface.h  someipmanager.cpp  someipmanager.h
qt/dashboard/qml/: TurnIndicator.qml  ValueSource.qml  dashboard.qml  nightmode.qml
qt/head_unit/: Lightpage.qml  MusicDeatil.qml  Musicpage.qml  Settingpage.qml  VideoDetail.qml  head_unit.pro  head_unit.pro.user.22  head_unit.pro.user.4.9-pre1  main.cpp  main.qml  qml.qrc  resources.qrc  someipmanager.cpp
qt/head_unit (copy)/: Musicpage.qml  Settingpage.qml  head_unit.pro  head_unit.pro.user.c8e52ea  main.qml  qml.qrc
qt/head_unit/image/: settingpage.cpp
qt/head_unit/ui/: musicPage.qml
qt/head_unit/ui/Musicpage/: Musicpage.qml
qt/head_unit/ui/Videopage/: Videopage.qml
qt/head_unit/ui/musicPage/: musicPage.qml
someip/project-attribute/: CMakeLists.txt
someip/project-attribute/fidl/: E02Attributes.fidl
someip/project-attribute/src/: E02AttributesClient.cpp  E02AttributesStubImpl.cpp
someip/project-hello/: CMakeLists.txt
someip/project-hello/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
someip/project-pyracer/fidl/: CAN-SomeIP.fdepl
someip/project-pyracer/src/: CANStubImpl.hpp
someip/qt_someip_ex/: canclient.cpp  canclient.h  main.cpp  someip_ex.pro
someip/vcan/: .can_sender.cpp.swo  .can_sender.cpp.swp  Makefile  can_receiver  can_receiver.cpp  can_sender  can_sender.cpp  can_sender1  can_sender1.cpp  can_sender2  can_sender2.cpp  vcan.sh
(+1268 files in other folders)
